fixes in video compressor